--- a/main.html
+++ b/main.html
@@ -3,14 +3,60 @@
 <html>
 
 <head>
+	<title>HTML Assignment 3</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<h1>HTML Assignment #3</h1>
+	<table class="middle" id="table-1">
+		<tr>
+			<td id="t11">left</td>
+			<td id="t12">center</td>
+			<td id="t13">right</td>
+		</tr>
+		<tr>
+			<td id="t11">left</td>
+			<td id="t12">center</td>
+			<td id="t13">right</td>
+		</tr>
+		<tr>
+			<td id="t11">left</td>
+			<td id="t12">center</td>
+			<td id="t13">right</td>
+		</tr>
+	</table>
+	<table class="middle" id="table-2">
+		<tr>
+			<td>one</td>
+		</tr>
+		<tr>
+			<td>two</td>
+		</tr>
+		<tr>
+			<td>three</td>
+		</tr>
+		<tr>
+			<td>four</td>
+		</tr>
+		<tr>
+			<td>five</td>
+		</tr>
+		<tr>
+			<td>six</td>
+		</tr>
+	</table>
+	<table class="middle" id="table-3">
+		<tr class="green">
+			<td>First Cell</td>
+		</tr>
+		<tr>
+			<td id="t-image"><img src="https://course.acciojob.com/open-web-editor?question=94329b7b-77ca-4bc5-b895-7d335a181608"></td>
+		</tr>
+		<tr class="blue">
+			<td>Last Cell</td>
+		</tr>
+	</table>
 </body>
 
 </html>
