--- a/main.html
+++ b/main.html
@@ -13,22 +13,22 @@
 		<tr>
 			<td id="t11">left</td>
 			<td id="t12">center</td>
-			<td id="t13">right</td>
+			<td id="t13" class="right" >right</td  >
+		</tr>
+		<tr class="center">
+			<td id="t11">left</td>
+			<td id="t12">center</td>
+			<td id="t13" class="right">right</td>
 		</tr>
 		<tr>
 			<td id="t11">left</td>
 			<td id="t12">center</td>
-			<td id="t13">right</td>
-		</tr>
-		<tr>
-			<td id="t11">left</td>
-			<td id="t12">center</td>
-			<td id="t13">right</td>
+			<td id="t13" class="right">right</td>
 		</tr>
 	</table>
 	<table class="middle" id="table-2">
 		<tr>
-			<td>one</td>
+			<td id="t21" colspan>one</td>
 		</tr>
 		<tr>
 			<td>two</td>
