--- a/main.html
+++ b/main.html
@@ -12,23 +12,23 @@
 	<table class="middle" id="table-1">
 		<tr>
 			<td id="t11">left</td>
-			<td id="t12">center</td>
+			<td id="t12" class="center">center</td>
 			<td id="t13" class="right" >right</td  >
 		</tr>
-		<tr class="center">
+		<tr >
 			<td id="t11">left</td>
-			<td id="t12">center</td>
+			<td id="t12" class="center">center</td>
 			<td id="t13" class="right">right</td>
 		</tr>
 		<tr>
 			<td id="t11">left</td>
-			<td id="t12">center</td>
+			<td id="t12" class="center">center</td>
 			<td id="t13" class="right">right</td>
 		</tr>
 	</table>
 	<table class="middle" id="table-2">
 		<tr>
-			<td id="t21" colspan>one</td>
+			<td id="t21" colspan="6">one</td>
 		</tr>
 		<tr>
 			<td>two</td>
